add all brinder-profile-api endpoints to swagger
